<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="LogArrayHandlePointers" Id="{0bdfd265-aff5-0db6-101c-b32a3e642899}">
    <Declaration><![CDATA[TYPE LogArrayHandlePointers :
STRUCT
	writePointer : UINT := 0;
	readPointer : UINT := 0;
	numOfMembers : UINT := 0;
	isBusy : BOOL := FALSE; (*If writing to array is busy now*)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>