<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="LogGlobalArrayObj" Id="{c9464c0c-8604-06f7-28f2-01c6e84894a8}">
    <Declaration><![CDATA[TYPE LogGlobalArrayObj :
STRUCT
		ARRAY_TC : ARRAY[0..GLOBAL_ARRAY_LENGTH] OF LogArrayStruct; //Oren Edit array name and size
		pointers : LogArrayHandlePointers;
		SemData : LogGlobalArraySemStruct;	
		
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>