<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="LogLocalArrayObj" Id="{f3d36bff-21b1-0d49-1444-40889f76ad1f}">
    <Declaration><![CDATA[TYPE LogLocalArrayObj :
STRUCT
		array_tc : ARRAY[0..LOCAL_ARRAY_LENGTH] OF LogArrayStruct;
		pointers : LogArrayHandlePointers;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>