<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="OperationTypeEnum" Id="{e99e1d58-cc18-0ab1-12a0-abad57be20f8}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
//{attribute 'strict'}
TYPE OperationTypeEnum :
(
		COLLECT2LOCAL, (*Collect a message into local array*)
		COPY2GLOBAL (*Copy messages from local array to global array*)
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>