<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="enumLogMessageLevelSeverity" Id="{2014e83f-3a62-0d0b-24d8-976c4a5ea85f}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
//{attribute 'strict'}
TYPE enumLogMessageLevelSeverity :
(
	LOG_RESERVED := 0,
	LOG_FATAL,
	LOG_ERROR,
	LOG_WARNING,
	LOG_INFO,
	LOG_DEBUG
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>