<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <GVL Name="GVL_1" Id="{c0f1e449-ee8d-04d2-35bc-bd87e6516ac5}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	MAX_COUNT_LOG_PARAM		: USINT := 5;	(*Maximum parameters index in log message variable data (from 0)*)
	LOCAL_ARRAY_LENGTH		: UINT := 32;	(* power oof 2 : The length of local (per task) array*)
	MAX_MEMBERS_TO_WRITE	: USINT := 8;
	GLOBAL_ARRAY_LENGTH		: UINT := 4*1024;(* power oof 2 : The length of global array*)
	LOG_TPL					: USINT := 0;
	LOG_MAIN_MOTOR			: USINT := 1;
	ENUM_OF_LAST_TASK		: USINT := 1;
	LOG_MSG_CATEGORY_LENGTH	: UINT := 10;
	LOG_MSG_TEXT_LENGTH		: USINT := 210;	(*The maximal length of log text *)
END_VAR

VAR_GLOBAL

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>